ND2 bug #031: Removed extra space after intro text.

--- a/app/styles/_ND2.scss
+++ b/app/styles/_ND2.scss
@@ -150,6 +150,7 @@ li{
     letter-spacing: 2px;
     text-transform: uppercase;
     margin-bottom: $line-height-computed;
+    display: inline-block;
 }
 .npPage-instructional{
     font-size: $font-size-h5;
